--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>wuziqi</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/index.js"></script>
   </head>
   <body>
-    <audio id="audio" src="music.mp3" autoplay></audio>
+    <audio id="audio" src="media/music.mp3" autoplay></audio>
     <div class="contain">
       <div class="qipan">
-      <!-- <span class="dian1"></span>
-			<span class="dian1"></span>
-			<span class="dian1"></span>
-			<span class="dian1"></span>
-			<span class="dian1"></span> -->
       </div>
     </div>
-    <div class="left">
-      <div class="left1">
-        <span class="time1"></span>
+    <div class="bigbox">
+      <div class="left">
+        <div class="left1">
+          <span class="time1"></span>
+        </div>
+        <div class="left2">
+          <span class="time2"></span>
+        </div>
       </div>
-      <div class="left2">
-        <span class="time2"></span>
+      <div class="right">
+        <div class="renji"></div>
+        <div class="renren"></div>
+        <div class="restart"></div>
       </div>
-    </div>
-    <div class="right">
-      <div class="renji"></div>
-      <div class="renren"></div>
-      <div class="restart"></div>
     </div>
     <div class="box">
       <div class="kaishi"></div>
